Added content slider and contant form

--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
             </div>
             <div class="col-md-4">
                 <div class="feature">
-                    <i class="fas fa-sliders-h  fa-4x" data-fa-transform="shrink-3 up-5"></i>
-                    <h3>Custom animation</h3>
-                    <p>Animate.css and waypoints.js allow for smooth animations scrolling down the site</p>
+                    <i class="fas fa-sliders-h  fa-4x" data-fa-transform="shrink-4.5 up-4.5"></i>
+                    <h3>Content Slider</h3>
+                    <p>Owl.Carousel.js makes navigation content sliders seamless with it's content carousel navigation.</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="feature">
-                    <i class="fas fa-play-circle fa-4x" data-fa-transform="shrink-3 up-5"></i>
-                    <h3>Custom animation</h3>
+                    <i class="fab fa-wpforms fa-4x" data-fa-transform="shrink-4 up-5"></i>
+                    <h3>Contant Form</h3>
                     <p>Animate.css and waypoints.js allow for smooth animations scrolling down the site</p>
                 </div>
             </div>
