Included built with care

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <div id="Feature" class="offset">
 <!--Start of Jumbotron-->
 <div class="jumbotron">
-    <div class="narrow">
+    <div class="narrow text-center">
         <div class="col-12">
             <h3 class="heading">Features</h3>
             <div class="heading-underline"></div>
@@ -116,7 +116,43 @@
 <!--End of Feature Section-->
 
 <!--Start Resources Section-->
-<div id="Resources" class="offset"></div>
+<div id="Resources" class="offset">
+    <div class="fixed-background">
+        <div class="row dark text-center">
+            <div class="col-12">
+                <h3 class="heading">Built with Care </h3>
+                <div class="heading-underline"></div>
+            </div>
+            <div class="col-md-4">
+                <h3>HTML 5</h3>
+                <div class="feature">
+                    <i class="fas fa-code fa-3x"></i>
+                </div>
+                <p class="lead">Built with the lastest, HTML 5</p>
+            </div>
+            <div class="col-md-4">
+                <h3>Bootstrap 4</h3>
+                <div class="feature">
+                    <i class="fas fa-bold fa-3x"></i>
+                </div>
+                <p class="lead">Built with the lastest, Bootstrap 4</p>
+            </div>
+            <div class="col-md-4">
+                <h3>CSS 3</h3>
+                <div class="feature">
+                    <i class="fab fa-css3 fa-3x"></i>
+                </div>
+                <p class="lead">Built with the lastest, CSS 3</p>
+            </div>
+
+        </div>
+            <div class="fixed-wrap">
+                <div class="fixed">
+
+                </div>
+            </div>
+    </div><!--end of fixed background class-->
+</div>
 <!--End of Resources Section-->
 
 <!--Start Clients Section-->
