--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#Course">Course</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#Features">Features</a>
+                <a class="nav-link" href="#Feature">Features</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#Resources">Resources</a>
