--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#Course">Course</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#Feature">Features</a>
+                <a class="nav-link" href="#Features">Features</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#Resources">Resources</a>
@@ -74,7 +74,7 @@
 <!--End of Course Section-->
 
 <!--Start Feature Section-->
-<div id="#Feature" class="offset">
+<div id="Features" class="offset">
 <!--Start of Jumbotron-->
 <div class="jumbotron">
     <div class="narrow text-center">
@@ -228,7 +228,7 @@
 <!--End of Contant Section-->
 
 <!--Script Source Files-->
-<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery-3.3.1.min.js"></script>
 <script src="bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
  <!--End of Script source files-->
